# knowledge-commons-profiles

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  ASYNC_IDMS.md  CHANGELOG.md  CONTRIBUTORS.txt  LICENSE  Makefile  README.md  SECURITY.md  TESTING.md  coverage.lcov  docker-compose.dev.yml  docker-compose.docs.yml  docker-compose.docsgithub.yml  docker-compose.github.yml  docker-compose.local.yml  docker-compose.production.yml  justfile  manage.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.envs/.github/: .django  .postgres
.github/: dependabot.yml
.github/workflows/: build-base.yml  ci.yml  deploy-dev.yml  deploy.yml  version-release.yml
.windsurf/rules/: auto-format.md
.windsurf/workflows/: address-pull-request-comments.md  generate-new-doc.md  update-docs.md
aws/: deploy-idms.sh  deploy-monitor.sh  idms-task-definition.json  monitor-task-definition.json  setup-iam.sh
compose/base/: Dockerfile
config/: asgi.py  broker_urls.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  idms.py  idms_dev.py  idms_local.py  idms_overrides.py  loadtest.py  local.py  production.py  test.py
docs/: README.md  TAGGING.md  api.rst  cilogon_oauth_flow_diagram.md  cilogon_security_issues.md  conf.py  docker_deployment_guide.md  environment_variables_guide.md  howto.rst  index.rst  logging_and_observability_guide.md  make.bat  migration_plan.md  users.rst  wordpress-avatar-sync-implementation.md
docs/_autosummary/: knowledge_commons_profiles.newprofile.api.rst  knowledge_commons_profiles.newprofile.apps.rst  knowledge_commons_profiles.newprofile.forms.rst  knowledge_commons_profiles.newprofile.management.commands.import_cover_images.rst  knowledge_commons_profiles.newprofile.management.commands.import_from_sql.rst  knowledge_commons_profiles.newprofile.management.commands.import_profile_images.rst  knowledge_commons_profiles.newprofile.management.commands.import_to_database_from_api.rst  knowledge_commons_profiles.newprofile.management.commands.rst  knowledge_commons_profiles.newprofile.management.rst  knowledge_commons_profiles.newprofile.mastodon.rst  knowledge_commons_profiles.newprofile.middleware.rst  knowledge_commons_profiles.newprofile.migrations.rst  knowledge_commons_profiles.newprofile.models.rst  knowledge_commons_profiles.newprofile.notifications.rst  knowledge_commons_profiles.newprofile.rst  knowledge_commons_profiles.newprofile.tests.model_factories.rst  knowledge_commons_profiles.newprofile.tests.rst  knowledge_commons_profiles.newprofile.tests.test_api.rst  knowledge_commons_profiles.newprofile.tests.test_forms.rst  knowledge_commons_profiles.newprofile.tests.test_init.rst  knowledge_commons_profiles.newprofile.tests.test_mastodon.rst  knowledge_commons_profiles.newprofile.tests.test_middleware.rst  knowledge_commons_profiles.newprofile.tests.test_models.rst  knowledge_commons_profiles.newprofile.tests.test_notifications.rst  knowledge_commons_profiles.newprofile.tests.test_views.rst  knowledge_commons_profiles.newprofile.tests.test_wordpress_router.rst  knowledge_commons_profiles.newprofile.tests.test_works.rst  knowledge_commons_profiles.newprofile.urls.rst  knowledge_commons_profiles.newprofile.views.rst  knowledge_commons_profiles.newprofile.wordpress_router.rst  knowledge_commons_profiles.newprofile.works.rst  newprofile.api.rst  newprofile.apps.rst  newprofile.forms.rst  newprofile.management.commands.import_cover_images.rst  newprofile.management.commands.import_from_sql.rst  newprofile.management.commands.import_profile_images.rst  newprofile.management.commands.import_to_database_from_api.rst  newprofile.management.commands.rst  newprofile.management.rst  (+21 more)
docs/cilogon/: broker_integration_guide_works.md  broker_wordpress_llm_prompt.md  cilogon_email.md  cilogon_features_technical_guide.md  cilogon_oauth_flow_diagram.md  cilogon_proxy_guide.md  universal_logout.md
docs/newprofile/: backfill_memberships_guide.md  profiles_app_technical_guide.md
docs/pycharm/: configuration.rst
keys/: metadata.xml
knowledge_commons_profiles/: __version__.py
knowledge_commons_profiles/cilogon/: admin.py  admin_site.py  apps.py  broker_client.py  broker_referer.py  broker_views.py  encryption.py  fields.py  forms.py  middleware.py  models.py  oauth.py  reserved_usernames.py  signals.py  timing.py  urls.py  views.py  views_debug.py
knowledge_commons_profiles/citeproc/: __init__.py  _version.py  frontend.py  model.py  string.py  types.py
knowledge_commons_profiles/common/: middleware.py  profiles_email.py
knowledge_commons_profiles/cron/: emails.py  monitor_website.py
knowledge_commons_profiles/loadtest_app/: apps.py
knowledge_commons_profiles/newprofile/: __init__.py  admin.py  api.py  apps.py  asgi.py  build_users_cache.py  cc_search.py  context_processors.py  custom_login.py  fields.py  forms.py  mailchimp.py  mastodon.py  middleware.py  models.py  network_urls.py  notifications.py  oauth.py  signals.py  society_enrolment.py  (+8 more)
loadtest/: DISTRIBUTED.md  README.md  docker-compose.loadtest-driver.yml  docker-compose.loadtest-target.yml  docker-compose.loadtest-worker.yml
loadtest/mock_idp/: Dockerfile  mock_cilogon.py  pyproject.toml
log_config/: dev.yaml  error_formatter.py  health_check_filter.py  local.yaml  log_context.py  prod.yaml
newprofile/: __init__.py  api.py  debug.py  forms.py  mastodon.py  middleware.py  models.py  notifications.py  urls.py  views.py  wordpress_router.py  works.py  wsgi.py
requirements/: base.txt  dev.txt  local.txt  production.txt
styles/: apa-cv.csl  apa-no-ampersand.csl  apa-no-initials.csl  apa-numeric-superscript-brackets.csl  apa-numeric-superscript.csl  apa-single-spaced.csl  apa-with-abstract.csl  associacao-brasileira-de-normas-tecnicas-numerico.csl  cahiers-mondes-anciens.csl  mots.csl  pallas.csl  rassegna-degli-archivi-di-stato.csl  triangle.csl  us-geological-survey.csl  zitierguide-leitfaden-zum-fachgerechten-zitieren-in-rechtswissenschaftlichen-arbeiten.csl
templates/: base.html  edit_profile.html  home.html  new_base.html  profile.html  works.html
(+462 files in other folders)
