# ==== pytest ====
[tool.pytest.ini_options]
#minversion = "6.0"
#addopts = "--ds=config.settings.test --reuse-db --import-mode=importlib"
python_files = [
    "tests.py",
    "test_*.py",
]

# ==== Coverage ====
[tool.coverage.run]
include = ["knowledge_commons_profiles/**"]
omit = ["*/migrations/*", "*/tests/*"]
plugins = ["django_coverage_plugin"]

# ==== mypy ====
[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = [
    "mypy_django_plugin.main",
]

[[tool.mypy.overrides]]
# Django migrations should not produce any errors:
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings.test"

# ==== djLint ====
[tool.djlint]
blank_line_after_tag = "load,extends"
close_void_tags = true
format_css = false
format_js = true
# TODO: remove T002 when fixed https://github.com/djlint/djLint/issues/687
ignore = "H006,H030,H031,T002"
include = "H017,H035"
indent = 2
max_line_length = 119
profile = "django"

[tool.djlint.css]
indent_size = 2

[tool.djlint.js]
indent_size = 2

[tool.ruff]
target-version = "py312"
# Exclude a variety of commonly ignored directories.
extend-exclude = [
    "*/migrations/*.py",
    "staticfiles/*",
]
line-length = 80

[tool.black]
line-length = 79

[tool.ruff.lint.flake8-builtins]
builtins-allowed-modules = ["json", "string", "types", "html"]

[tool.ruff.lint]
select = [
  "F",
  "E",
  "W",
  "C90",
  "I",
  "N",
  "UP",
  "YTT",
  # "ANN", # flake8-annotations: we should support this in the future but 100+ errors atm
  "ASYNC",
  "S",
  "BLE",
  "FBT",
  "B",
  "A",
  "COM",
  "C4",
  "DTZ",
  "T10",
  "DJ",
  "EM",
  "EXE",
  "FA",
  'ISC',
  "ICN",
  "G",
  'INP',
  'PIE',
  "T20",
  'PYI',
  'PT',
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SLOT",
  "SIM",
  "TID",
  "TC",
  "INT",
  # "ARG", # Unused function argument
  "PTH",
  "ERA",
  "PD",
  "PGH",
  "PL",
  "TRY",
  "FLY",
  # "NPY",
  # "AIR",
  "PERF",
  # "FURB",
  # "LOG",
  "RUF",
]
ignore = [
  "S101", # Use of assert detected https://docs.astral.sh/ruff/rules/assert/
  "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
  "SIM102", # sometimes it's better to nest
  "UP038", # Checks for uses of isinstance/issubclass that take a tuple
          # of types for comparison.
          # Deactivated because it can make the code slow:
          # https://github.com/astral-sh/ruff/issues/7871
  "PT009", # Using pytest asserts
  "SLF001", # Protected member access
  "ERA001", # Commented-out code
  "FBT002", # Boolean positional arg in function definition (create=False)
  "DJ001", # Avoid using null=True on string-based fields
  "COM812", # Missing trailing comma
  "S106", # Hardcoded password (for tests)
  "S105", # Hardcoded password (for tests)
  "PT027", # PyTest raises
  "S320", # use of lxml parsing
]
# The fixes in extend-unsafe-fixes will require
# provide the `--unsafe-fixes` flag when fixing.
extend-unsafe-fixes = [
  "UP038",
]

[tool.ruff.lint.isort]
force-single-line = true

[project]
name = "newprofile"
version = "4.7.0"
description = "The profiles and IDMS system for Knowledge Commons"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-slugify==8.0.4",
    "Pillow==12.1.1",
    "argon2-cffi==25.1.0",
    "redis==7.4.0",
    "hiredis==3.3.0",
    # Django
    "django==6.0.3",
    "django-environ==0.13.0",
    "django-model-utils==5.0.0",
    "django-crispy-forms==2.6",
    "crispy-bootstrap5==2026.3",
    "django-redis==6.0.0",
    # App
    "djangorestframework==3.17.1",
    "django-tinymce==5.0.0",
    "django-select2==8.4.8",
    "django-bleach==3.1.0",
    "phpserialize==1.3",
    "asyncstdlib==3.14.0",
    "lxml==6.0.2",
    "aiohttp==3.13.3",
    "mysqlclient==2.2.8",
    "black==26.3.1",
    "pylint==4.0.4",
    # Management commands
    "rich==14.3.3",
    "sqloxide==0.1.56",
    "smart-open==7.5.1",
    "pydantic==2.12.5",
    "httpx==0.28.1",
    "tenacity==9.1.4",
    "pandas==3.0.1",
    "altair==6.0.0",
    "django-basicauth==0.5.3",
    "Authlib==1.6.9",
    "requests==2.33.0",
    "nameparser==1.1.3",
    "tldextract==5.3.1",
    "drf-yasg==1.21.15",
    "python-json-logger==4.0.0",
    "validators==0.35.0",
    "urllib3==2.6.3",
    "sparkpost==1.3.10",
    "pyopenssl==26.0.0",
    "cryptography==46.0.6",
    "PyJWT==2.12.1"
]

[dependency-groups]
production = [
    "gunicorn==25.1.0",
    "psycopg[c]==3.3.3",
    "Collectfasta==3.3.3",
    "sentry-sdk==2.56.0",
    "django-storages[s3]==1.14.6",
    "django-anymail[amazon-ses]==14.0",
]
dev = [
    {include-group = "production"},
]
local = [
    {include-group = "production"},
    "Werkzeug[watchdog]==3.1.6",
    "ipdb==0.13.13",
    "psycopg[c]==3.3.3",
    # Testing
    "mypy==1.19.1",
    "django-stubs[compatible-mypy]==6.0.1",
    "pytest==9.0.2",
    "pytest-sugar==1.1.1",
    # Documentation
    "sphinx==9.1.0",
    "sphinx-autobuild==2025.8.25",
    # Code quality
    "ruff==0.15.7",
    "coverage==7.13.5",
    "djlint==1.36.4",
    "pre-commit==4.5.1",
    # Django dev tools
    "factory-boy==3.3.3",
    "django-debug-toolbar==6.2.0",
    "django-extensions==4.1",
    "django-coverage-plugin==3.2.0",
    "pytest-django==4.12.0",
    "toml==0.10.2",
    "sphinx-rtd-theme==3.1.0",
    "django-sslserver",
]

[tool.commitizen]
version = "4.7.0"
version_files = [
    "knowledge_commons_profiles/__version__.py",
    "pyproject.toml:version"
]
update_changelog_on_bump = true
